--- a/README.adoc
+++ b/README.adoc
@@ -15,9 +15,9 @@ Including the ability to follow references, child items and access media directl
 |XP Version
 |Dependency
 
-|0.4.0
+|1.0.0
 |6.10.x
-|com.enonic.lib:lib-guillotine:0.4.0
+|com.enonic.lib:lib-guillotine:1.0.0-B1
 |===
 
 == Build
