--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,11 +1,6 @@
 = Guillotine Library - API and custom integrations
 
-The guillotine library exposes the read-only part of the Enonic Content API, 
-including access to the Enonic query language. 
-Guillotine dynamically analyzes all available content types in applications and 
-generates a GraphQL API specific to your site. 
-This gives you direct, typed and documented access to all content within the site. 
-Including the ability to follow references, child items and access media directly.
+Simply add this library to your app to expose a powerful dynamically generated read-only GraphQL API of all your editorial content. Guillotine dynamically analyzes all available content types in the app and generates a GraphQL API specific to your site. This gives you direct, typed and documented access to all content within the site. Including the ability to follow references, child items and access media directly.
 
 [NOTE]
 ==== 
