--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,10 @@ Including the ability to follow references, child items and access media directl
 |XP Version
 |Dependency
 
+|4.0.0
+|7.0.0
+|com.enonic.lib:lib-guillotine:4.0.0
+
 |3.0.0
 |7.0.0
 |com.enonic.lib:lib-guillotine:3.0.0
@@ -33,6 +37,15 @@ Including the ability to follow references, child items and access media directl
 |===
 
 == Breaking changes
+
+=== Breaking changes in 4.0
+
+- Type "Content": Field "page": Removed (Use fields "pageAsJson" or "components" instead)
+- Types "Flat*Component*": Renamed to "*Component*".
+- Type "FlatDescriptorBasedComponentData": Split into 2 types: "LayoutComponentData" and "PartComponentData"
+- Fields "config": Renamed to "configAsJson"
+- Type "Content": Field "components": By default, the components of the page template are used instead if there is one.
+- Type "Content": Field "components": By default, the fragments are inlined
 
 === Breaking changes in 3.0
 
