--- a/README.adoc
+++ b/README.adoc
@@ -7,6 +7,10 @@ generates a GraphQL API specific to your site.
 This gives you direct, typed and documented access to all content within the site. 
 Including the ability to follow references, child items and access media directly.
 
+== Documentation
+
+For the full documentation of the Guillotine project, visit the Enonic Developer Portal: https://developer.enonic.com/docs/guillotine
+
 == Compatibility
 
 [cols="1,1,3", options="header"]
@@ -74,5 +78,5 @@ To build this project, execute the following:
 ./gradlew clean build
 ----
 
-== https://github.com/enonic/lib-guillotine/blob/master/docs/index.adoc[Documentation]
+
 
