Attachment object and attachmentUrl #79

--- a/docs/api.adoc
+++ b/docs/api.adoc
@@ -573,6 +573,9 @@ Direct Known Subtypes: FormInput
 |mimeType: String
 |Attachment mime type
 
+|attachmentUrl: String
+|Attachment URL
+
 |===
 
 === PublishInfo
