--- a/docs/api.adoc
+++ b/docs/api.adoc
@@ -686,6 +686,15 @@ Aggregations enable extracting statistical data from search results. Only one of
 |getDistance: <<GeoDistanceAggregationInput>>
 |GeoDistance aggregation
 
+|min: <<MinAggregationInput>>
+|Min aggregation
+
+|max: <<MaxAggregationInput>>
+|Max aggregation
+
+|count: <<ValueCountAggregationInput>>
+|ValueCount aggregation
+
 |===
 
 
@@ -719,6 +728,42 @@ Aggregations enable extracting statistical data from search results. Only one of
 
 |===
 
+=== MinAggregationInput
+
+==== Fields
+
+|===
+|Name(Arguments):Type | Description
+
+|field: String!
+|The property path
+
+|===
+
+
+=== MaxAggregationInput
+
+==== Fields
+
+|===
+|Name(Arguments):Type | Description
+
+|field: String!
+|The property path
+
+|===
+
+=== ValueCountAggregationInput
+
+==== Fields
+
+|===
+|Name(Arguments):Type | Description
+
+|field: String!
+|The property path
+
+|===
 
 === RangeAggregationInput
 
